--- a/package.json
+++ b/package.json
@@ -3,27 +3,27 @@
   "source": "index.html",
   "scripts": {
     "start": "yarn build && node ./server.js",
-    "dev": "parcel ./index.html --no-cache",
+    "dev": "parcel ./index.html --no-cache --open",
     "build": "parcel build ./index.html"
   },
   "dependencies": {
-    "typescript": "4.8.4"
+    "express": "4.18.2"
   },
   "devDependencies": {
-    "@anikin/parcel-transformer-handlebars": "1.0.9",
-    "@anikin/parcel-transformer-handlebars-precompile": "1.0.1",
+    "@anikin/parcel-transformer-handlebars": "^1.0.9",
+    "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
     "@parcel/transformer-sass": "2.7.0",
-    "express": "4.18.2",
-    "express-handlebars": "6.0.6",
-    "handlebars": "4.7.7",
-    "parcel": "2.7.0",
-    "postcss": "8.4.18",
-    "postcss-bem": "0.4.1",
-    "postcss-css-variables": "0.18.0",
-    "postcss-import": "15.0.0",
-    "postcss-modules": "4.3.0",
-    "postcss-nested": "6.0.0",
-    "postcss-plugin": "1.0.0"
+    "express-handlebars": "^6.0.6",
+    "handlebars": "^4.7.7",
+    "parcel": "^2.7.0",
+    "postcss": "^8.4.18",
+    "postcss-bem": "^0.4.1",
+    "postcss-css-variables": "^0.18.0",
+    "postcss-import": "^15.0.0",
+    "postcss-modules": "^4.3.0",
+    "postcss-nested": "^6.0.0",
+    "postcss-plugin": "^1.0.0",
+    "typescript": "4.8.4"
   },
   "@parcel/transformer-css": {
     "drafts": {
