--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "build": "parcel build ./index.html"
   },
   "dependencies": {
+    "eslint-config-airbnb": "^19.0.4",
     "express": "4.18.2"
   },
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "^1.0.9",
     "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
-    "@parcel/transformer-sass": "2.7.0",
+    "@parcel/transformer-sass": "2.8.0",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
+    "eslint": "^8.28.0",
     "express-handlebars": "^6.0.6",
     "handlebars": "^4.7.7",
     "parcel": "^2.7.0",
