--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "eslint-config-airbnb": "^19.0.4",
-    "express": "4.18.2"
+    "express": "4.18.2",
+    "nanoid": "^4.0.0"
   },
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "^1.0.9",
