--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
   ],
   "include": [
     "./src/**/*.ts"
-  ],
+, "src/pages/Auth/index.ts", "src/consts.tsx"  ],
+  "module": "commonjs",
   "exclude": [
     "node_modules",
     "*.hbs",
