--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "start": "yarn build && node ./server.js",
     "dev": "parcel ./index.html --no-cache --open",
-    "build": "parcel build ./index.html"
+    "build": "parcel build ./index.html",
+    "lint:css": "stylelint './src/styles.scss'"
   },
   "dependencies": {
     "eslint-config-airbnb": "^19.0.4",
@@ -28,6 +29,8 @@
     "postcss-modules": "^4.3.0",
     "postcss-nested": "^6.0.0",
     "postcss-plugin": "^1.0.0",
+    "stylelint": "14.16.0",
+    "stylelint-config-standard": "^29.0.0",
     "typescript": "4.8.4"
   },
   "@parcel/transformer-css": {
