--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "yarn build && node ./server.js",
     "dev": "parcel ./index.html --no-cache --open",
     "build": "parcel build ./index.html",
-    "lint:css": "stylelint './src/styles.scss'"
+    "stylelint": "stylelint \"**/*.css\"",
+    "eslint": "eslint . --ext .ts"
   },
   "dependencies": {
     "eslint-config-airbnb": "^19.0.4",
@@ -16,9 +17,10 @@
     "@anikin/parcel-transformer-handlebars": "^1.0.9",
     "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
     "@parcel/transformer-sass": "2.8.0",
-    "@typescript-eslint/eslint-plugin": "^5.44.0",
-    "@typescript-eslint/parser": "^5.44.0",
-    "eslint": "^8.28.0",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "eslint": "^8.29.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
     "express-handlebars": "^6.0.6",
     "handlebars": "^4.7.7",
     "parcel": "^2.7.0",
