--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,7 +1,11 @@
 {
   "extends": [ "stylelint-config-standard" ],
   "rules": {
-    "color-hex-case": "lower"
+    "color-hex-case": "upper",
+    "color-hex-length": "long",
+    "alpha-value-notation": "number",
+    "no-descending-specificity": null,
+    "selector-class-pattern": null
   },
   "ignoreFiles": [
     "build/*"
