--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "parcel build ./index.html --no-cache",
     "stylelint": "stylelint \"**/*.scss\"",
     "eslint": "eslint . --ext .ts",
-    "typescript": "tsc --noEmit"
+    "typescript": "tsc --noEmit",
+    "tests": "yarn stylelint && yarn typescript && yarn typescript"
   },
   "dependencies": {
     "eslint-config-airbnb": "19.0.4",
