--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "stylelint": "stylelint \"**/*.scss\"",
     "eslint": "eslint . --ext .ts",
     "typescript": "tsc --noEmit",
-    "tests": "yarn stylelint && yarn typescript && yarn typescript"
+    "errors": "yarn stylelint && yarn typescript && yarn typescript",
+    "tests": "mocha --require ts-node/register './src/**/*.test.ts'"
   },
   "dependencies": {
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
+    "chai": "4.3.7",
     "eslint-config-airbnb": "19.0.4",
     "express": "4.18.2",
-    "nanoid": "4.0.0"
+    "mocha": "10.2.0",
+    "nanoid": "4.0.0",
+    "ts-node": "10.9.1"
   },
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "1.0.9",
