--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "yarn build && node ./server.js",
     "dev": "parcel ./index.html --no-cache --open",
-    "build": "parcel build ./index.html --no-cache",
+    "build": "NODE_ENV=production parcel build ./index.html",
     "stylelint": "stylelint \"**/*.scss\"",
     "eslint": "eslint . --ext .ts",
     "typescript": "tsc --noEmit",
