--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "yarn build && node ./server.js",
     "dev": "parcel ./index.html --no-cache --open",
-    "build": "NODE_ENV=production parcel build ./index.html",
+    "build": "NODE_ENV=production parcel build ./index.html --no-cache",
     "stylelint": "stylelint \"**/*.scss\"",
     "eslint": "eslint . --ext .ts",
     "typescript": "tsc --noEmit",
@@ -24,14 +24,14 @@
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "^1.0.2",
     "@anikin/parcel-transformer-handlebars-precompile": "1.0.1",
-    "@parcel/transformer-sass": "2.7.0",
+    "@parcel/transformer-sass": "2.8.3",
     "@typescript-eslint/eslint-plugin": "5.45.0",
     "@typescript-eslint/parser": "5.45.0",
     "eslint": "8.29.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
     "express-handlebars": "6.0.6",
     "handlebars": "4.7.7",
-    "parcel": "2.7.0",
+    "parcel": "2.8.3",
     "postcss": "8.4.18",
     "postcss-bem": "0.4.1",
     "postcss-css-variables": "0.18.0",
