--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "start": "yarn build && node ./server.js",
     "dev": "parcel ./index.html --no-cache --open",
     "build": "NODE_ENV=production parcel build ./index.html --no-cache",
+    "webpack": "webpack",
+    "server": "webpack serve",
     "stylelint": "stylelint \"**/*.scss\"",
     "eslint": "eslint . --ext .ts",
     "typescript": "tsc --noEmit",
@@ -24,13 +26,23 @@
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "^1.0.2",
     "@anikin/parcel-transformer-handlebars-precompile": "1.0.1",
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.21.0",
     "@parcel/transformer-sass": "2.8.3",
+    "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "5.45.0",
     "@typescript-eslint/parser": "5.45.0",
+    "babel-loader": "^9.1.2",
+    "css-loader": "6.7.3",
     "eslint": "8.29.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
     "express-handlebars": "6.0.6",
     "handlebars": "4.7.7",
+    "handlebars-loader": "^1.7.3",
+    "html-loader": "4.2.0",
+    "html-webpack-plugin": "5.5.0",
+    "mini-css-extract-plugin": "2.7.2",
     "parcel": "2.8.3",
     "postcss": "8.4.18",
     "postcss-bem": "0.4.1",
@@ -39,9 +51,16 @@
     "postcss-modules": "4.3.0",
     "postcss-nested": "6.0.0",
     "postcss-plugin": "1.0.0",
+    "sass": "1.58.3",
+    "sass-loader": "10.4.1",
+    "style-loader": "3.3.1",
     "stylelint": "14.16.0",
     "stylelint-config-standard": "29.0.0",
-    "typescript": "4.8.4"
+    "ts-loader": "9.4.2",
+    "typescript": "4.8.4",
+    "webpack": "5.75.0",
+    "webpack-cli": "5.0.1",
+    "webpack-dev-server": "^4.11.1"
   },
   "@parcel/transformer-css": {
     "drafts": {
