--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,23 @@
 {
   "compilerOptions": {
+    "target": "es2016",
+    "module": "es6",
     "noImplicitAny": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "sourceMap": true,
     "strictNullChecks": true,
     "moduleResolution": "node",
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ]
   },
   "include": [
     "./src/**/*.ts",
-    "src/pages/Auth/index.ts",
-    "src/consts.tsx"
   ],
-  "module": "commonjs",
+  "files": [
+    "src/index.ts"
+  ],
   "exclude": [
     "node_modules",
-    "*.hbs",
-    "dist"
+    "**/*.test.ts",
+    "**/*.config.ts"
   ]
 }
