--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "parcel ./index.html --no-cache --open",
     "build": "NODE_ENV=production parcel build ./index.html --no-cache",
     "webpack": "webpack",
-    "server": "webpack serve",
+    "server": "webpack serve --mode=development --progress",
     "stylelint": "stylelint \"**/*.scss\"",
     "eslint": "eslint . --ext .ts",
     "typescript": "tsc --noEmit",
@@ -59,8 +59,7 @@
     "ts-loader": "9.4.2",
     "typescript": "4.8.4",
     "webpack": "5.75.0",
-    "webpack-cli": "5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-cli": "^5.0.1"
   },
   "@parcel/transformer-css": {
     "drafts": {
