--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "ya-practicum-chat",
   "source": "index.html",
   "scripts": {
-    "start": "yarn build && node ./server.js",
-    "dev": "parcel ./index.html --no-cache --open",
-    "build": "NODE_ENV=production parcel build ./index.html --no-cache",
-    "webpack": "webpack",
-    "server": "webpack serve --mode=development --progress",
+    "start": "yarn build && yarn server",
+    "build": "webpack",
+    "server": "node ./server.js",
     "stylelint": "stylelint \"**/*.scss\"",
     "eslint": "eslint . --ext .ts",
     "typescript": "tsc --noEmit",
