--- a/package.json
+++ b/package.json
@@ -9,15 +9,12 @@
     "eslint": "eslint . --ext .ts",
     "typescript": "tsc --noEmit",
     "errors": "yarn stylelint && yarn typescript && yarn typescript",
-    "tests": "mocha --require ts-node/register './src/**/*.test.ts'"
+    "tests": "mocha --require ts-node/register './src/**/*.test.ts'",
+    "mocha": "mocha"
   },
   "dependencies": {
-    "@types/chai": "^4.3.4",
-    "@types/mocha": "^10.0.1",
-    "chai": "4.3.7",
     "eslint-config-airbnb": "19.0.4",
     "express": "4.18.2",
-    "mocha": "10.2.0",
     "nanoid": "4.0.0",
     "ts-node": "10.9.1"
   },
@@ -28,10 +25,13 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.21.0",
     "@parcel/transformer-sass": "2.8.3",
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "5.45.0",
     "@typescript-eslint/parser": "5.45.0",
     "babel-loader": "^9.1.2",
+    "chai": "4.3.7",
     "css-loader": "6.7.3",
     "eslint": "8.29.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
@@ -41,6 +41,7 @@
     "html-loader": "4.2.0",
     "html-webpack-plugin": "5.5.0",
     "mini-css-extract-plugin": "2.7.2",
+    "mocha": "10.2.0",
     "parcel": "2.8.3",
     "postcss": "8.4.18",
     "postcss-bem": "0.4.1",
@@ -57,7 +58,8 @@
     "ts-loader": "9.4.2",
     "typescript": "4.8.4",
     "webpack": "5.75.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "yarn-audit-fix": "^9.3.9"
   },
   "@parcel/transformer-css": {
     "drafts": {
