--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "eslint": "eslint . --ext .ts",
     "typescript": "tsc --noEmit",
     "errors": "yarn stylelint && yarn typescript && yarn typescript",
-    "tests": "mocha --require ts-node/register './src/**/*.test.ts'",
+    "tests": "mocha --require ts-node/register src/**/*.test.ts",
+    "jest": "jest",
     "mocha": "mocha"
   },
   "dependencies": {
@@ -26,7 +27,11 @@
     "@babel/preset-typescript": "^7.21.0",
     "@parcel/transformer-sass": "2.8.3",
     "@types/chai": "^4.3.4",
+    "@types/jest": "29.4.0",
+    "@types/jsdom": "^21.1.0",
+    "@types/jsdom-global": "^3.0.4",
     "@types/mocha": "^10.0.1",
+    "@types/sinon": "^10.0.13",
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "5.45.0",
     "@typescript-eslint/parser": "5.45.0",
@@ -36,10 +41,15 @@
     "eslint": "8.29.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
     "express-handlebars": "6.0.6",
+    "global-jsdom": "^8.7.0",
     "handlebars": "4.7.7",
     "handlebars-loader": "^1.7.3",
     "html-loader": "4.2.0",
     "html-webpack-plugin": "5.5.0",
+    "jest": "29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jsdom": "^21.1.0",
+    "jsdom-global": "3.0.2",
     "mini-css-extract-plugin": "2.7.2",
     "mocha": "10.2.0",
     "parcel": "2.8.3",
@@ -52,9 +62,11 @@
     "postcss-plugin": "1.0.0",
     "sass": "1.58.3",
     "sass-loader": "10.4.1",
+    "sinon": "15.0.1",
     "style-loader": "3.3.1",
     "stylelint": "14.16.0",
     "stylelint-config-standard": "29.0.0",
+    "ts-jest": "^29.0.5",
     "ts-loader": "9.4.2",
     "typescript": "4.8.4",
     "webpack": "5.75.0",
