--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es2016",
-    "module": "es6",
+    "target": "es2018",
+    "module": "commonjs",
     "noImplicitAny": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
@@ -17,7 +17,6 @@
   ],
   "exclude": [
     "node_modules",
-    "**/*.test.ts",
     "**/*.config.ts"
   ]
 }
