--- a/package.json
+++ b/package.json
@@ -54,12 +54,10 @@
     "mocha": "10.2.0",
     "parcel": "2.8.3",
     "postcss": "8.4.18",
-    "postcss-bem": "0.4.1",
     "postcss-css-variables": "0.18.0",
     "postcss-import": "15.0.0",
     "postcss-modules": "4.3.0",
     "postcss-nested": "6.0.0",
-    "postcss-plugin": "1.0.0",
     "sass": "1.58.3",
     "sass-loader": "10.4.1",
     "sinon": "15.0.1",
@@ -70,8 +68,7 @@
     "ts-loader": "9.4.2",
     "typescript": "4.8.4",
     "webpack": "5.75.0",
-    "webpack-cli": "^5.0.1",
-    "yarn-audit-fix": "^9.3.9"
+    "webpack-cli": "^5.0.1"
   },
   "@parcel/transformer-css": {
     "drafts": {
