--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "eslint": "eslint . --ext .ts",
     "typescript": "tsc --noEmit",
     "errors": "yarn stylelint && yarn typescript && yarn typescript",
-    "tests": "jest"
+    "tests": "jest",
+    "prepare": "husky install"
   },
   "dependencies": {
     "nanoid": "4.0.0"
@@ -64,7 +65,8 @@
     "typescript": "4.8.4",
     "webpack": "5.76.1",
     "webpack-cli": "5.0.1",
-    "webpack-dev-server": "4.11.1"
+    "webpack-dev-server": "4.11.1",
+    "husky": "8.0.0"
   },
   "@parcel/transformer-css": {
     "drafts": {
